# toy-brain

./: .gitignore  ADR-001-locked-decisions-D1-D8.md  ADR-002-bands-generic-not-per-axis.md  ADR-003-strict-counter-pattern.md  ADR-004-target-axes-regression-gate.md  ADR-005-predicate-monotonicity.md  ADR-006-developmental-vocabulary.md  AGENTS.md  ARCHIVE.md  CLAUDE.md  CODEX_CHATGPT_DYNAMIC_FLOW_BRIDGE_AUDIT.md  CODEX_CHATGPT_LIMITED_WRITE_BRIDGE_AUDIT.md  CODEX_CHATGPT_ORCHESTRATION_BRIDGE_AUDIT.md  CODEX_CHATGPT_SUBAGENT_BRIDGE_AUDIT.md  CODEX_SMART_SUBAGENT_GO_HARNESS_AUDIT.md  CURRENT_CAMPAIGN.md  CURRENT_MISSION.md  FAST_SAFE_CROSSREFERENCE_NOTES.md  INVARIANT_CATALOG.md  OPERATOR_TUI_AGENT_LAYOUT_AUDIT.md  OPERATOR_TUI_AGENT_LAYOUT_CORRIGENDA.md  OPERATOR_TUI_AGENT_LAYOUT_KICKOFF.md  OPERATOR_TUI_AGENT_LAYOUT_SYNTHESIS.md  OPERATOR_TUI_AUDIT.md  OPERATOR_TUI_CATALOG_PATCH_PLAN.md  OPERATOR_TUI_CORRIGENDA.md  PHASE2_v1_CORRIGENDA.md  PHASE2_v1_KICKOFF.md  PHASE3_10C_AUTOSAVE_AUDIT.md  PHASE3_10C_AUTOSAVE_CATALOG_PATCH_PLAN.md  PHASE3_10C_AUTOSAVE_KICKOFF.md  PHASE3_10_OPERATIONAL_OBSERVABILITY_AUTOSAVE_CORRIGENDA.md  PHASE3_10_OPERATIONAL_OBSERVABILITY_AUTOSAVE_SYNTHESIS.md  PHASE3_10_OPS_OBSERVABILITY_CATALOG_PATCH_PLAN.md  PHASE3_11_BEHAVIOR_FINDINGS.md  PHASE3_11_BUG_UX_TRIAGE_PLAN.md  PHASE3_11_CODEX_CLI_RUNTIME_CATALOG_PATCH_PLAN.md  PHASE3_11_CODEX_CLI_RUNTIME_CORRIGENDA.md  PHASE3_11_CODEX_CLI_RUNTIME_KICKOFF.md  PHASE3_11_COMPREHENSIVE_BEHAVIOR_TEST_AUDIT.md  (+68 more)
.claude/: settings.json
.codex/: CODEX_AGENT_MAP.md  README.md  config.toml
brain/: invariants.py  (+8 more)
(+636 files in other folders)
